# sonia-simulation

./: .gitignore  Assembly-CSharp.csproj  README.md  auv_smulation.sln  sonia-simulation.sln
Assets/: CinemachineLensPresets.asset  DollyCam.fbx  DollyCam@GateVideoCompe.fbx  msgbrowser_settings.asset  torpille.prefab
Assets/auv_package/: CMakeLists.txt  package.xml
Assets/auv_package/AuvPackage/msg/: CamData.cs  CameraData.cs  CameraDatacopy.cs  PosRot.cs
Assets/auv_package/Components/: SoniaParameters.cs
Assets/auv_package/Scripts/: ActuatorsActions.cs  CamDataPublisher.cs  CameraDataPublisher.cs  CollisionPublisher.cs  FreeLookControl.inputactions  GetInitialConditionService.cs  InitialConditionPublisher.cs  PosPublisher copy.py  PosPublisher.py  PositionSubscriber.cs  RosSubscriberExample.cs  RotateThrusters.cs  SelectAUV.cs  SelectScene.cs  SetAUVService.cs  SonarDataPublisher.cs  SonarDataPublisherPC.cs  Torpidos.cs  TrajectorySubscriber.cs  freeLookControl.cs  server_endpoint.py
Assets/auv_package/Sensor/msg/: BatteryState.cs
Assets/auv_package/msg/: CameraData.msg
Build Linux Local_Data/: globalgamemanagers  level1  level2  resources.assets  sharedassets2.assets.resS
Config/: params.yaml  params_auv8.yaml
Local2_Data/: globalgamemanagers  level0
Local_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0
Logs/: ApiUpdaterCheck.txt
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Temp/: workerlic
(+270 files in other folders)
